--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Acme::Umlautify.
 
+1.01  2004/04/07
+
+	Corrected spelling errors in the documentation.
+	Changed "NÄMË" to "NAME" for CPAN to parse the module description.
+
 1.00  2004/04/07
 
 	Developed due to input from Kristy Davis and Chip Salzenburg
