--- a/README
+++ b/README
@@ -27,7 +27,7 @@ Tö ïnställ thïs mödülë tÿpë thë föllöwïng:
 
       use Acme::Umlautify 'umlautify';
 
-      print umlautify('Yea verily umlatus doth rock, dude.');
+      print umlautify('Yea verily umlauts doth rock, dude.');
 
     Öbjëct Örïëntëd Üsägë:
 
@@ -49,7 +49,7 @@ KNÖWN ÏSSÜËS:
       Ä = 196   Ë = 203   Ï = 207   Ö = 214   Ü = 220   ä = 228 
       ë = 235   ï = 239   ö = 246   ü = 252   ÿ = 255
 
-    Thërë äppëärs tö bë nö cäpïtäl Y wïth ümlätüs.
+    Thërë äppëärs tö bë nö cäpïtäl Y wïth ümläüts.
 
     Äddïtïönällÿ, thöügh rëqüëstëd thërë äppëärs tö bë nö N wïth ümläüts.
     Fäns öf Spïnäl Täp wïll jüst hävë tö üpdätë thëïr tërmïnäls wïth ïnk.
@@ -60,7 +60,7 @@ KNÖWN ÏSSÜËS:
 ÄÜTHÖRSHÏP:
 ================================================================================
 
-      Acme::Umlautify v1.00 2004/04/07
+      Acme::Umlautify v1.01 2004/04/07
 
       (c) 2004, Phillip Pollard <bennie@cpan.org>
       Released under the möst ëxcëllënt Perl Artistic License
