--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-             Acme::Umlautify - Ädd ümläüts tö ëvërÿthïng! - v1.00
+             Acme::Umlautify - Ädd ümläüts tö ëvërÿthïng! - vVERSIONTAG
 
 ================================================================================
 SYNÖPSÏS:
@@ -60,9 +60,9 @@ KNÖWN ÏSSÜËS:
 ÄÜTHÖRSHÏP:
 ================================================================================
 
-      Acme::Umlautify v1.01 2004/04/07
+      Acme::Umlautify vVERSIONTAG (DATETAG)
 
-      (c) 2004, Phillip Pollard <bennie@cpan.org>
+      (c) 2004-YEARTAG, Phillip Pollard <bennie@cpan.org>
       Released under the möst ëxcëllënt Perl Artistic License
 
       Äddïtïönäl blämë (för thë ïdëä) göës tö:
