--- a/Changes
+++ b/Changes
@@ -2,12 +2,16 @@ Revision history for Perl extension Acme::Umlautify.
 
 VERSIONTAG  DATETAG
 
+	Corrected miscapitalization of 'ACME' in module meta data
+
+1.02  2014/02/25
+
 	Updating meta information
 	Added LICENSE information into the distribution
 	
 1.01  2004/04/07
 
-	Corrected spelling errors in the documentation.
+	Corrected spelling errors in the documentation
 	Changed "NÄMË" to "NAME" for CPAN to parse the module description.
 
 1.00  2004/04/07
