--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension Acme::Umlautify.
 VERSIONTAG  DATETAG
 
 	Corrected miscapitalization of 'ACME' in module meta data
+	Updated to new build script with auto-generated meta data
 
 1.02  2014/02/25
 
