--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Perl extension Acme::Umlautify.
 
 VERSIONTAG  DATETAG
 
+  Corrected:
+    Makefile.PL improperly called for the prerequisite Perl version.
+
+1.04  2014/02/27
+    
 	Now auto-generating META.json and META.yml
 	Corrected in-module version tagging
 
