--- a/README
+++ b/README
@@ -1,12 +1,13 @@
 
-             Acme::Umlautify - Ädd ümläüts tö ëvërÿthïng! - vVERSIONTAG
+
+             Acme::Umlautify - Ädd Ümläüts tö ëvërÿthïng! - vVERSIONTAG
 
 ================================================================================
 SYNÖPSÏS:
 ================================================================================
 
-    Acme::Umlautify öffërs böth än öbjëct änd ëxpörtëd mëthöd ïntërfäcë tö
-    tränsförm strïngs öf tëxt ïntö zën öf ëxcëssïvë ümlätüägë.
+Acme::Umlautify öffërs böth än öbjëct-örïëntëd ïntërfäcë änd än ëxpörtëd mëthöd
+tö tränsförm strïngs öf tëxt ïntö thë zën öf ëxcëssïvë ümlätäügë.
 
 ================================================================================
 ÏNSTÄLLÄTÏÖN:
@@ -23,49 +24,64 @@ Tö ïnställ thïs mödülë tÿpë thë föllöwïng:
 ÜSÄGË:
 ================================================================================
 
-    Ëxpörtëd Mëthöd Üsägë:
+Ëxpörtëd Mëthöd Üsägë:
 
-      use Acme::Umlautify 'umlautify';
+  use Acme::Umlautify 'umlautify';
 
-      print umlautify('Yea verily umlauts doth rock, dude.');
+  print umlautify('Yea verily umlauts doth rock, dude.');
 
-    Öbjëct Örïëntëd Üsägë:
+Öbjëct-Örïëntëd Üsägë:
 
-      use Acme::Umlautify;
+  use Acme::Umlautify;
 
-      my $au = new Acme::Umlautify;
+  my $au = new Acme::Umlautify;
 
-      print $au->do('"Motley Crue" could have had way more umlauts, dude.');
+  print $au->do('"Motley Crue" could have had way more umlauts, dude.');
 
-    Ïn ëïthër cäsë, gïvën än ärräÿ öf ïnpüt strïngs, ä cörrëspöndïng ärräÿ
-    ïs rëtürnëd löökïng fär cöölër. Ön ä scälë öf önë tö tën ït's än ËLËVËN.
+Ïn ëïthër cäsë, gïvën än ärräÿ öf ïnpüt strïngs, ä cörrëspöndïng ärräÿ ïs 
+rëtürnëd löökïng fär cöölër. Ön ä scälë öf önë tö tën ït's än ËLËVËN!
 
 ================================================================================
 KNÖWN ÏSSÜËS:
 ================================================================================
 
-    Chäräctërs ärë sïmplÿ mäppëd tö thë cörrëspöndïng chr() cödës:
+Chäräctërs ärë sïmplÿ mäppëd tö thë cörrëspöndïng chr() cödës:
 
-      Ä = 196   Ë = 203   Ï = 207   Ö = 214   Ü = 220   ä = 228 
-      ë = 235   ï = 239   ö = 246   ü = 252   ÿ = 255
+  A = 196   e = 203   i = 207   o = 214   U = 220   A = 228 
+  e = 235   i = 239   o = 246   U = 252   Y = 255
 
-    Thërë äppëärs tö bë nö cäpïtäl Y wïth ümläüts.
+Thërë äppëärs tö bë nö cäpïtäl Y wïth ümläüts.
 
-    Äddïtïönällÿ, thöügh rëqüëstëd thërë äppëärs tö bë nö N wïth ümläüts.
-    Fäns öf Spïnäl Täp wïll jüst hävë tö üpdätë thëïr tërmïnäls wïth ïnk.
-
-    Röck ön!
+Äddïtïönällÿ, thöügh rëqüëstëd, thërë äppëärs tö bë nö N wïth ümläüts. Fäns öf 
+Spïnäl Täp wïll jüst hävë tö üpdätë thëïr tërmïnäls wïth ïnk.
 
 ================================================================================
-ÄÜTHÖRSHÏP:
+VËRSÏÖN:
 ================================================================================
 
-      Acme::Umlautify vVERSIONTAG (DATETAG)
+	Acme::Umlautify vVERSIONTAG (DATETAG)
 
-      (c) 2004-YEARTAG, Phillip Pollard <bennie@cpan.org>
-      Released under the möst ëxcëllënt Perl Artistic License
+================================================================================
+CÖPYRÏGHT:
+================================================================================
 
-      Äddïtïönäl blämë (för thë ïdëä) göës tö:
-      Kristina Davis <krd@menagerie.tf>
-      Chip Salzenberg <chip@pobox.com>
+	(c) 2004-YEARTAG, Phillip Pollard <bennie@cpan.org>
 
+================================================================================
+LÏCËNSË:
+================================================================================
+
+Released under the möst ëxcëllënt Perl Artistic License
+
+This source code is released under the "Perl Artistic License 2.0," the text of
+which is included in the LICENSE file of this distribution. It may also be
+reviewed here: http://opensource.org/licenses/artistic-license-2.0
+
+================================================================================
+KÄÜTHÖRSHÏP:
+================================================================================
+
+Äddïtïönäl blämë (för thë ïdëä) göës tö:
+
+  Kristina Davis <krd@menagerie.tf>
+  Chip Salzenberg <chip@pobox.com>
