--- a/README
+++ b/README
@@ -78,7 +78,7 @@ which is included in the LICENSE file of this distribution. It may also be
 reviewed here: http://opensource.org/licenses/artistic-license-2.0
 
 ================================================================================
-KÄÜTHÖRSHÏP:
+ÄÜTHÖRSHÏP:
 ================================================================================
 
 Äddïtïönäl blämë (för thë ïdëä) göës tö:
